--- a/web/H5/NewsView.html
+++ b/web/H5/NewsView.html
@@ -1,57 +1,116 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-    <meta content="width=device-width, minimum-scale=1.0, maximum-scale=2.0" name="viewport" />
-    <script src="../lib/jquery/jquery-1.8.1.min.js" type="text/javascript"></script>
-    <script src="../js/common.js" type="text/javascript"></script>
-    <link href="css/mastert.css" rel="stylesheet" type="text/css" />
-    <link href="css/hasport_green.css" rel="stylesheet" type="text/css" />
-    <title></title>
-     <script type="text/javascript">
-         ///绑定数据
-         $(function () {
-             var guid = GetUrlParam("Guid");
-             if (guid != null) {
-                 $.ajax({
-                     type: "POST",
-                     url: "../QCH_News/Ajax_News.ashx",
-                     data: { Action: "getModel", Guid: guid },
-                     dataType: "json",
-                     async: false,
-                     beforeSend: function () {
-                     },
-                     success: function (data) {
-                         $("#newsTitle").html(data.t_News_Title);
-                         $("#spStyle").html(data.t_Style_Name);
-                         $("#newsDate").html(data.t_News_Date);
-                         $("#source").html( data.t_News_Author);
-                         $("#text1").html(data.t_News_Contents);
-                     },
-                     complete: function (XMLHttpRequest, textStatus) {
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="renderer" content="webkit" />
+    <title>璧勮璇︽儏</title>
+    <link rel="dns-prefetch" href="//test.cn-qch.com/" />
+    <link rel="dns-prefetch" href="//www.cn-qch.com/" />
+    <link rel="stylesheet" href="/h5/css/public.css" />
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
+    <style>
+        .container {
+            max-width: 768px;
+            overflow-x: hidden;
+            margin: auto;
+            padding-top: 1rem;
+        }
 
-                     }
-                 });
-             }
-         })
-    </script>
+            .container > h2 {
+                font-size: 1.2rem;
+                text-align: center;
+                line-height: 1.6em;
+                padding: 0 1rem;
+            }
+
+            .container > p {
+                font-size: .9rem;
+                text-align: center;
+                color: #b9b9b9;
+                padding: 1rem 0;
+                border-bottom: 1px dashed #000;
+                margin-bottom: 1rem;
+            }
+
+            .container .content {
+                padding: 1rem;
+            }
+
+                .container .content span {
+                    display: inline;
+                }
+
+                .container .content a {
+                    word-wrap: break-word;
+                    display: block;
+                }
+
+                .container .content img {
+                    display: block;
+                    margin-left: auto !important;
+                    margin-right: auto !important;
+                }
+
+        .loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: #fff url(/h5/img/loading.gif) no-repeat 50% 50%;
+            background-size: 2rem auto;
+        }
+    </style>
 </head>
 <body>
-    <div class="content_news" id="navtop">
-        <article class="articleList" style="display: block;">
-            <div class="head clearfix">
-                <h1 class="title" id="newsTitle"  name="newsTitle"></h1>
-                <h2><span class="time" id="spStyle" name="spStyle"></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="time" id="newsDate" name="newsDate"></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="source" id="newsSourse" name="newsSourse"></span></h2>
-            </div>
-            <div class="text clearfix">
-                <div style="width: 100%; height: 1px; border-bottom: 1px dashed #000;">
-                </div>
-                <div class="text1" id="text1" name="text1" runat="server">
-                </div>
-            </div>
-        </article>
-        <div>
+    <div class="container"></div>
+    <div class="loading"></div>
+    <script type="text/html" id="contentTemplate">
+        <h2><%=data.t_News_Title%></h2>
+        <p><%=data.t_Style_Name%> <%=formatDate(data.t_News_Date,'yyyy-MM-dd')%> </p>
+        <div class="content">
+            <%==data.t_News_Contents.replace(/===/g,'<br>
+            ')%>
         </div>
-    </div>
+    </script>
+    <script src="/h5/js/zepto.min.js"></script>
+    <script src="/h5/js/artTemplate.js"></script>
+    <script src="/h5/js/util.js"></script>
+    <script charset="gb2312" src="js/loader.js"></script>
+    <script>
+        $(function () {
+            var guid = util.getUrlParam("Guid");
+            if (guid != null) {
+                $.ajax({
+                    url: "http://120.25.106.244:9001/api/news/GetById",
+                    data: { Guid: guid },
+                    dataType: "json",
+                    success: function (res) {
+                        if (res) {
+                            $('.container').html(template('contentTemplate', { data: res }));
+                            document.title = '璧勮璇︽儏 - - ' + res.t_News_Title;
+                            var text = $('.content').text().trim();
+                            var desc = text.length > 140 ? text.slice(0, 138) + '...' : text;
+                            var imgUrl;
+                            if (res.t_News_Pic) {
+                                imgUrl = 'http://www.cn-qch.com:8002/attach/images/' + res.t_News_Pic;
+                            } else {
+                                imgUrl = 'http://www.cn-qch.com/h5/img/logo-.png';
+                            }
+                            wxShare({
+                                title: res.t_News_Title,
+                                desc: desc,
+                                imgUrl: imgUrl
+                            });
+                        }
+                        $('.loading').remove();
+                    }
+                });
+            }
+        })
+        template.helper('formatDate', util.formatDate);
+    </script>
 </body>
 </html>
