--- a/web/H5/ShareCourse.html
+++ b/web/H5/ShareCourse.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="renderer" content="webkit" />
+    <link rel="dns-prefetch" href="//test.cn-qch.com/" />
+    <link rel="dns-prefetch" href="//www.cn-qch.com/" />
     <title>课程分享</title>
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/shareCourse.css">
@@ -69,16 +71,10 @@
         </header>
         <div class="contentbox">
             <div class="detailsbox clear">
-                <%var instruction=data.t_Course_Instruction.replace(/===/g,'<br>')%>
-                <%var show_limit=80%>
+                <%var instruction=data.t_Course_Instruction.trim().replace(/===/g,'<br>')%>
+                <%var lecturerRemark=data.lecturerRemark.trim().replace(/===/g,' ')%>
                 <h2>详情</h2>
-                <p>
-                    <%==instruction.slice(0,show_limit)%> 
-                    <%if(instruction.length>=show_limit){%><span class="hide"><%==instruction.slice(show_limit)%></span><%}%>
-                </p>
-                <%if(instruction.length>=show_limit){%>
-                <a class="slideup">展开</a>
-                <%}%>
+                <p><%==instruction%></p>
             </div>
             <div class="tutorbox">
                 <h2>讲师</h2>
@@ -89,7 +85,7 @@
                         </div>
                         <div class="right">
                             <h2><%=data.lecturerName%></h2>
-                            <p><%=data.t_Course_OneWord%></p>
+                            <p><%=lecturerRemark.length>32?lecturerRemark.slice(0,30)+'...':lecturerRemark%></p>
                         </div>
                     </li>
                 </ul>
@@ -137,7 +133,7 @@
     <script src="js/artTemplate.js"></script>
     <script src="js/shareCourse.js"></script>
     <script>
-        var guid = GetUrlParam("Guid") || GetUrlParam("guid") || '4199e40b-3b3d-4e3a-b3d1-070854f5b0f3';
+        var guid = GetUrlParam("Guid") || GetUrlParam("guid") || '';
         $.ajax({
             type: 'get',
             cache: false,
