--- a/web/H5/ShareProject.html
+++ b/web/H5/ShareProject.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="renderer" content="webkit" />
+    <link rel="dns-prefetch" href="//test.cn-qch.com/" />
+    <link rel="dns-prefetch" href="//www.cn-qch.com/" />
     <title>项目分享</title>
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/page1.css">
+    <!--<script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>-->
 </head>
 <body>
     <div class="shade-div"></div>
@@ -32,95 +35,116 @@
         </tr>
     </table>
    
-    <div class="container loading"></div>
+    <div class="container loading">
+        <footer>
+            <a href="http://www.cn-qch.com/app"><i class="fa fa-user-plus"></i> 私信</a>
+            <a href="http://www.cn-qch.com/app"><i class="fa fa-commenting"></i> 关注</a>
+            <a href="http://www.cn-qch.com/app"><i class="fa fa-commenting"></i> 评论</a>
+        </footer>
+    </div>
+    <div class="shade hide"></div>
+    <div class="wxbox hide">
+        <div class="box1">
+            <p>微信公众号:<span></span></p>
+            <a class="copy" id="copy">拷贝</a>
+        </div>
+        <div class="box2">
+            <a class="cancel">取消</a>
+        </div>
+    </div>
     <!-- 主内容模板 -->
     <script type="text/html" id="contentTemplate">
     <%var imgUrl='http://www.cn-qch.com:8002/attach/images/'%>
     <%var avatorUrl='http://www.cn-qch.com:8002/attach/user/'%>
     <%var defaultAvatorUrl='img/avator.png'%>
+    <%var oneWord=data.t_Project_OneWord||''%>
         <header>
-            <img src="<%=imgUrl + data.t_Project_ConverPic%>">
-            <h2><%=data.t_Project_Name%></h2>
-            <h3><%=data.t_Project_OneWord%></h3>
+            <img src="<%=imgUrl + data.logo%>">
+            <h2><%=data.t_Project_Name||''%></h2>
+            <h3><%=oneWord.length>40?oneWord.slice(0,38)+'...':oneWord%></h3>
         </header>
         <ul class="lists lists1">
-            <li><label>所在城市</label><span><%=data.t_Project_CityName%></span></li>
-            <li><label>项目领域</label><span><%=data.FiledName%></span></li>
-            <li><label>项目阶段</label><span><%=data.PhaseName%></span></li>
+            <li><label>所在城市</label><span><%=data.t_Project_CityName||''%></span></li>
+            <li><label>项目领域</label><span><%=data.t_Project_Field.t_Style_Name||''%></span></li>
+            <li><label>项目阶段</label><span><%=data.t_Project_Phase.t_Style_Name||''%></span></li>
         </ul>
         <div class="detailsbox">
             <h2>项目描述</h2>
-            <p><%==data.t_Project_Instruction.replace(/===/g,'<br>')%></p>
+            <p><%==data.t_Project_Instruction?data.t_Project_Instruction.replace(/===/g,'<br>'):'暂未添加'%></p>
         </div>
-        <%if(data.t_Project_Perfer){%>
         <div class="detailsbox">
             <h2>项目优势</h2>
-            <p><%==data.t_Project_Perfer.replace(/===/g,'<br>')%></p>
+            <p><%==data.t_Project_Perfer?data.t_Project_Perfer.replace(/===/g,'<br>'):'暂未添加'%></p>
         </div>
-        <%}%>
         <div class="detailsbox">
             <h2>目标用户</h2>
-            <p><%==data.t_Project_Client.replace(/===/g,'<br>')%></p>
+            <p><%==data.t_Project_Client?data.t_Project_Client.replace(/===/g,'<br>'):'暂未添加'%></p>
         </div>
         <ul class="lists lists2">
-            <li><label>融资状态</label><span>仅投资人可见</span></li>
+            <li><label>融资状况</label><span>仅投资人可见</span></li>
             <li><label>融资金额</label><span>仅投资人可见</span></li>
             <li><label>资金用途</label><span>仅投资人可见</span></li>
         </ul>
         <%if(data.t_Project_ProfitWay){%>
         <div class="detailsbox">
             <h2>盈利途径</h2>
-            <p><%==data.t_Project_ProfitWay.replace(/===/g,'<br>')%></p>
+            <p><%==data.t_Project_ProfitWay.replace(/===/g,'<br>')||'暂无'%></p>
         </div>
         <%}%>
+        <%if(data.team.length){%>
         <div class="teambox">
             <h2>核心团队</h2>
-            <table cellpadding="0" cellspacing="0"></table>
+            <table cellpadding="0" cellspacing="0">
+                <%include('teamTemplate')%>
+            </table>
         </div>
+        <%}%>
+        <%if(data.images.length){%>
         <div class="showbox">
             <h2>产品展示</h2>
             <div class="banner">
                 <div class="frame">
                     <div class="box">
-                        <%data.Pic.forEach(function(item,index){%>
+                        <%data.images.forEach(function(item,index){%>
                         <img src="<%=imgUrl+item.t_Pic_Url%>" alt="<%=item.t_Pic_Remark%>">
                         <%})%>
                     </div>
                 </div>
                 <div class="tag">
-                    <%for(var i=0,len=data.Pic.length;i<len;i++){%>
+                    <%for(var i=0,len=data.images.length;i<len;i++){%>
                     <span <%if(i==0){%>class="current"<%}%> ></span>
                     <%}%>
                 </div>
             </div>
         </div>
+        <%}%>
         <div class="linksbox">
             <h2>项目链接</h2>
             <div class="clear">
-                <a class="gw <%if(data.t_Project_Website){%>active<%}%>" <%if(data.t_Project_Website){%>href="http://<%=data.t_Project_Website%>"<%}%>>官网</a>
-                <a class="ct <%if(data.t_Project_Link){%>active<%}%>"  <%if(data.t_Project_Link){%>href="<%=data.t_Project_Link%>"<%}%>>客户端</a>
-                <a class="wx <%if(data.t_Project_Weixin){%>active<%}%>">微信公众号</a>
+                <a class="gw <%if(data.t_Project_Website){%>active<%}%>" <%if(data.t_Project_Website){%>href="<%=data.t_Project_Website.indexOf('http://')==0?data.t_Project_Website:('http://'+data.t_Project_Website)%>"<%}%>>官网</a>
+                <a class="ct <%if(data.t_Project_Link){%>active<%}%>"  <%if(data.t_Project_Link){%>href="<%=data.t_Project_Link.indexOf('http://')==0?data.t_Project_Link:('http://'+data.t_Project_Link)%>"<%}%>>客户端</a>
+                <a class="wx <%if(data.t_Project_Weixin){%>active<%}%>" data-wx="<%=data.t_Project_Weixin%>" href="http://www.cn-qch.com/app">微信公众号</a>
             </div>
         </div>
         <div class="demand">
-            <h2 class="first">合作人需求</h2>
+            <%if(data.t_Project_ParterWant){%>
+            <h2 class="first">合伙人需求</h2>
             <div class="clear">
-                <%data.ParterWant.forEach(function(item,index){%>
-                <a><%=item.ParterWant%></a>
+                <%data.t_Project_ParterWant.forEach(function(item,index){%>
+                <a><%=item.t_Style_Name%></a>
                 <%})%>
             </div>
+            <%}%>
             <h2 class="last">评论</h2>
         </div>
-        <ul class="commentlist"></ul>
-        <footer>
-            <a href="http://www.cn-qch.com/app"><i class="fa fa-user-plus"></i> 私信</a>
-            <a href="http://www.cn-qch.com/app"><i class="fa fa-commenting"></i> 关注</a>
-            <a href="http://www.cn-qch.com/app"><i class="fa fa-commenting"></i> 评论</a>
-        </footer>
+        <ul class="commentlist">
+            <%include('commentTemplate')%>
+        </ul>
     </script>
+    <!-- 评论 -->
     <script type="text/html" id="commentTemplate">
         <%var avatorUrl='http://www.cn-qch.com:8002/attach/user/'%>
-        <%data.items.forEach(function(item,index){%>
+        <%data.userTalk.forEach(function(item,index){%>
         <li class="clear">
             <a><img src="<%=avatorUrl+item.userAvator%>"></a>
             <div>
@@ -129,13 +153,14 @@
             </div>
         </li>
         <%})%>
-        <%if(data.items.length==0){%>
+        <%if(data.userTalk.length==0){%>
         <p>暂无评论</p>
         <%}%>
     </script>
+    <!-- 团队 -->
     <script type="text/html" id="teamTemplate">
         <%var avatorUrl='http://www.cn-qch.com:8002/attach/user/'%>
-        <%data.forEach(function(item,index){%>
+        <%data.team.forEach(function(item,index){%>
             <tr>
                 <td><img src="<%=avatorUrl + item.userAvator%>"></td>
                 <td>
@@ -149,51 +174,71 @@
     <script src="/h5/js/artTemplate.js"></script>
     <script src="/h5/js/util.js"></script>
     <script src="/h5/js/shareProject.js"></script>
+    <!--<script charset="gb2312" src="js/loader.js"></script>-->
     <script>
-        var guid = util.getUrlParam("Guid");
-        var userGuid = util.getUrlParam("UserGuid");
+        var guid = util.getUrlParam("Guid")||'';
         $.ajax({
-            cache: false,
-            dataType: 'json',
-            url: 'http://120.25.106.244:9001/api/project/GetProjectInfo',
-            data: { Guid: guid ,UserGuid:userGuid},
-            success: function (res1) {
-                if(res1){
-                    var data=JSON.parse(res1)[0].result[0];
-                    $('.container').html(template('contentTemplate', { data: data }));
-                    $.ajax({
-                        cache:false,
-                        dataType:'json',
-                        url:'http://120.25.106.244:9001/api/usertalk/getall',
-                        data:{guid:guid,page:1,pagesize:10},
-                        success:function(res2){
-                            if(res2){
-                                $('.commentlist').html(template('commentTemplate', { data: res2 }));
-                                $.ajax({
-                                    cache:false,
-                                    dataType:'json',
-                                    url:'http://120.25.106.244:9001/api/project/GetTeam',
-                                    data:{ProjectGuid:guid},
-                                    success:function(res3){
-                                        if(res3&&res3.length){
-                                            $('.teambox table').html(template('teamTemplate', { data: res3 }));
-                                        }else{
-                                            $('.teambox').remove();
-                                        }
-                                        $('.container').removeClass('loading').siblings('.shade-div').remove();
-                                        $('.commentlist img').each(function(){
-                                            var width=$(this).width();
-                                            $(this).css({height:width,borderRadius:width/2});
-                                        });
-                                        $('.banner .box img').length && banner.init();
-                                    }
-                                })
-                            }
-                        }
-                    })
+            cache:false,
+            dataType:'json',
+            url:'http://120.25.106.244:9001/api/project/GetProject',
+            data:{guid:guid},
+            success:function(res){
+                if(res){
+                    $('.container').prepend(template('contentTemplate', { data: res }));
+                    bindEvent();
+                    if(res.t_Project_Weixin){
+                        $('.wxbox .box1 p span').text(res.t_Project_Weixin);
+                    }
+                    /*var title=res.t_Project_Name;
+                    var desc=res.t_Project_OneWord;
+                    var imgUrl=$('header img').eq(0).attr('src');
+                    wxShare({
+                        title: title,
+                        desc: desc,
+                        imgUrl: imgUrl
+                    });*/
                 }
+                $('.container').removeClass('loading').siblings('.shade-div').remove();
+                $('.commentlist img').each(function(){
+                    var width=$(this).width();
+                    $(this).css({height:width,borderRadius:width/2});
+                });
+                $('.banner .box img').length && banner.init();
             }
         })
+        function bindEvent(){
+            util.addTapEvent($('a.wx')[0],function(el){
+                if(!$(el).data('wx')) {
+                    util.msgBox('项目方尚未添加微信公众号');
+                }else{
+                    //$('.wxbox,.shade').removeClass('hide');
+                    location.href='http://www.cn-qch.com/app';
+                }
+            })
+            util.addTapEvent($('a.gw')[0],function(el){
+                if(!el.href) {
+                    util.msgBox('项目方尚未添加官网链接');
+                }else{
+                    location.href=$(el).attr('href');
+                }
+            })
+            util.addTapEvent($('a.ct')[0],function(el){
+                if(!el.href) {
+                    util.msgBox('项目方尚未添加客户端链接');
+                }else{
+                    location.href=$(el).attr('href');
+                }
+            })
+            util.addTapEvent($('a.copy')[0],function(el){
+                var txt=$(el).siblings('p').children('span').text();
+                $('.wxbox,.shade').addClass('hide');
+                //util.msgBox('拷贝成功，请到微信中搜索公众号！');
+                util.msgBox('暂不支持拷贝操作');
+            })
+            util.addTapEvent($('a.cancel')[0],function(el){
+                $('.wxbox,.shade').addClass('hide');
+            })
+        }
     </script>
 </body>
 </html>
