--- a/web/H5/ShareTutor.html
+++ b/web/H5/ShareTutor.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="renderer" content="webkit" />
+    <link rel="dns-prefetch" href="//test.cn-qch.com/" />
+    <link rel="dns-prefetch" href="//www.cn-qch.com/" />
     <title>导师分享</title>
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/shareTutor.css">
@@ -46,7 +48,7 @@
                 <h2><%=data.t_Lecturer_Name%></h2>
                 <b><%==data.t_Lecturer_Position.replace(/===/g,'<br>')%></b>
                 <h3>
-                    教授方向：<%==data.t_Lecturer_Subject.replace(/===/g,' ')%> 
+                    教授方向：<%==data.t_Lecturer_Subject.replace(/===/g,'<br>')%> 
                     <!--课程：<%=data.T_Lecturer_Count||0%>-->
                 </h3>
                 <p><%==data.t_Lecturer_Intor.replace(/===/g,'<br>')%></p>
@@ -92,9 +94,8 @@
     <script src="js/artTemplate.js"></script>
     <script src="js/shareTutor.js"></script>
     <script>
-        var guid = GetUrlParam("guid") || GetUrlParam("Guid") || '38fdf6e8-47bb-47d4-81b9-903c4871d931';
+        var guid = GetUrlParam("guid") || GetUrlParam("Guid") || '5e12fa68-bf63-4032-bebd-890ee116c9b7';
         $.ajax({
-            type: 'get',
             cache: false,
             dataType: 'json',
             url: 'http://120.25.106.244:9001/api/Lecturer/GetById',
